refactor: Fix test conventions and extract proficiency column constant
Rename three test methods in MenteeMapperTest from the `test` prefix to
`should` prefix, add @DisplayName annotations with Given-When-Then wording,
and remove inline // Arrange / Act / Assert phase comments. Move the
proficiency_level_id column name from MemberConstants (which would breach
PMD DataClass at NOPA=4) into a private constant inside PostgresSkillRepository
where it is exclusively used. Also update commit and pre-commit-review skill
files to enforce these Java test conventions going forward.